syntax = "proto3";

import "google/protobuf/timestamp.proto";

package comments;

service Comments {
    rpc GetComment (GetCommentRequest) returns (GetCommentResponse);
    rpc GetComments (GetCommentsRequest) returns (GetCommentsResponse);
    rpc AddComment (AddCommentRequest) returns (AddCommentResponse);
    rpc UpdateComment (UpdateCommentRequest) returns (UpdateCommentResponse);
    rpc DeleteComment (DeleteCommentRequest) returns (DeleteCommentResponse);
}


// ---------- COMMON ----------

message Comment {
    string id = 1;
    string content = 2;
    string user_id = 3;
    string post_id = 4;

    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

// ---------- MESSAGES ----------

message GetCommentRequest {
    string id = 1;
}

message GetCommentResponse {
    Comment comment = 1;
}

// --------------------

message GetCommentsRequest {
    string post_id = 1;
}

message GetCommentsResponse {
    repeated Comment comments = 1;
}

// --------------------

message AddCommentRequest {
    string user_id = 1;
    string post_id = 2;
    string content = 3;
}

message AddCommentResponse {
    Comment comment = 1;
}

// --------------------

message UpdateCommentRequest {
    string id = 1;
    string content = 2;
    string user_id = 3;
    string post_id = 4;
}

message UpdateCommentResponse {
    Comment comment = 1;
}

// --------------------

message DeleteCommentRequest {
    string id = 1;
}

message DeleteCommentResponse {
    Comment comment = 1;
}